[Markdown][Add-ons] Remove inline styles (#9850)
* Remove inline styles from add-ons docs

* Remove more inline styles from add-ons docs

* Remove inline styles from manifest key pages

--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/theme/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/theme/index.html
@@ -18,7 +18,7 @@ browser-compat: webextensions.manifest.theme
 <table class="fullwidth-table standard-table">
  <tbody>
   <tr>
-   <th scope="row" style="width: 30%;">Type</th>
+   <th scope="row">Type</th>
    <td><code>Object</code></td>
   </tr>
   <tr>
@@ -190,7 +190,7 @@ browser-compat: webextensions.manifest.theme
 <table class="fullwidth-table standard-table">
  <tbody>
   <tr>
-   <td style="background-color: white;">
+   <td>
     <p><img alt="Overview of the color properties and how they apply to Firefox UI components" src="themes_components_annotations.png"></p>
    </td>
   </tr>
@@ -420,7 +420,7 @@ browser-compat: webextensions.manifest.theme
 }</pre>
     </details>
 
-    <p><img alt="" src="ntp_colors.png" style="display: block; margin: 0 auto;"></p>
+    <p><img alt="" src="ntp_colors.png"></p>
    </td>
   </tr>
   <tr>
@@ -443,7 +443,7 @@ browser-compat: webextensions.manifest.theme
 }</pre>
     </details>
 
-    <p><img alt="" src="ntp_colors.png" style="display: block; margin: 0 auto;"></p>
+    <p><img alt="" src="ntp_colors.png"></p>
    </td>
   </tr>
   <tr>
@@ -581,7 +581,7 @@ browser-compat: webextensions.manifest.theme
 }</pre>
     </details>
 
-    <p><img alt="" src="sidebar_colors.png" style="display: block; margin: 0 auto;"></p>
+    <p><img alt="" src="sidebar_colors.png"></p>
    </td>
   </tr>
   <tr>
@@ -599,7 +599,7 @@ browser-compat: webextensions.manifest.theme
 }</pre>
     </details>
 
-    <p><img alt="" src="screen_shot_2018-09-16_at_6.13.31_pm.png" style="display: block; margin: 0px auto;"></p>
+    <p><img alt="" src="screen_shot_2018-09-16_at_6.13.31_pm.png"></p>
    </td>
   </tr>
   <tr>
@@ -618,7 +618,7 @@ browser-compat: webextensions.manifest.theme
 }</pre>
     </details>
 
-    <p><img alt="" src="screen_shot_2018-10-04_at_11.15.46_am.png" style="display: block; margin: 0px auto;"></p>
+    <p><img alt="" src="screen_shot_2018-10-04_at_11.15.46_am.png"></p>
    </td>
   </tr>
   <tr>
@@ -641,7 +641,7 @@ browser-compat: webextensions.manifest.theme
 }</pre>
     </details>
 
-    <p><img alt="" src="screen_shot_2018-10-04_at_11.22.41_am.png" style="display: block; margin: auto;"></p>
+    <p><img alt="" src="screen_shot_2018-10-04_at_11.22.41_am.png"></p>
    </td>
   </tr>
   <tr>
@@ -666,7 +666,7 @@ browser-compat: webextensions.manifest.theme
 }</pre>
     </details>
 
-    <p><img alt="" src="sidebar_colors.png" style="display: block; margin: 0 auto;"></p>
+    <p><img alt="" src="sidebar_colors.png"></p>
    </td>
   </tr>
   <tr>
@@ -1332,7 +1332,7 @@ browser-compat: webextensions.manifest.theme
 
 <p>It will give you a browser that looks like this:</p>
 
-<p><img alt="" src="theme.png" style="display: block; margin-left: auto; margin-right: auto;"></p>
+<p><img alt="" src="theme.png"></p>
 
 <p>In this screenshot, <code>"toolbar_vertical_separator"</code> is the white vertical line in the URL bar dividing the Reader Mode icon from the other icons.</p>
 
