Remove some random classes

--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/browser_specific_settings/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/browser_specific_settings/index.html
@@ -23,7 +23,7 @@ browser-compat: webextensions.manifest.browser_specific_settings
 		<tr>
 			<th scope="row">Example</th>
 			<td>
-			<pre class="brush: json; no-line-numbers">
+			<pre class="brush: json;">
 "browser_specific_settings": {
   "gecko": {
     "id": "addon@example.com",
@@ -70,9 +70,9 @@ browser-compat: webextensions.manifest.browser_specific_settings
 
 <p>For example:</p>
 
-<pre class="brush: json; auto-links: false; no-line-numbers">"id": "extensionname@example.org"</pre>
+<pre class="brush: json; auto-links: false;">"id": "extensionname@example.org"</pre>
 
-<pre class="brush: json; auto-links: false; no-line-numbers">"id": "{daf44bf7-a45e-4450-979c-91cf07434c3d}"</pre>
+<pre class="brush: json; auto-links: false;">"id": "{daf44bf7-a45e-4450-979c-91cf07434c3d}"</pre>
 
 <h3 id="Microsoft_Edge_properties">Microsoft Edge properties</h3>
 
@@ -113,7 +113,7 @@ browser-compat: webextensions.manifest.browser_specific_settings
 
 <p>Example with all possible keys. Note that most extensions will omit <code>strict_max_version</code> and <code>update_url</code>.</p>
 
-<pre class="brush: json; auto-links: false; no-line-numbers">"browser_specific_settings": {
+<pre class="brush: json; auto-links: false;">"browser_specific_settings": {
   "gecko": {
     "id": "addon@example.com",
     "strict_min_version": "42.0",
