--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/default_locale/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/default_locale/index.html
@@ -22,7 +22,7 @@ browser-compat: webextensions.manifest.default_locale
   <tr>
    <th scope="row">Example</th>
    <td>
-    <pre class="brush: json no-line-numbers">
+    <pre class="brush: json">
 "default_locale": "en"</pre>
    </td>
   </tr>
@@ -35,7 +35,7 @@ browser-compat: webextensions.manifest.default_locale
 
 <h2 id="Example">Example</h2>
 
-<pre class="brush: json no-line-numbers">"default_locale": "en"</pre>
+<pre class="brush: json">"default_locale": "en"</pre>
 
 <h2 id="Browser_compatibility">Browser compatibility</h2>
 
