--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/icons/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/icons/index.html
@@ -22,7 +22,7 @@ browser-compat: webextensions.manifest.icons
   <tr>
    <th scope="row">Example</th>
    <td>
-    <pre class="brush: json no-line-numbers">
+    <pre class="brush: json">
 "icons": {
   "48": "icon.png",
   "96": "icon@2x.png"
@@ -46,7 +46,7 @@ browser-compat: webextensions.manifest.icons
 
 <p>The keys in the <code>icons</code> object specify the icon size in px, values specify the relative icon path. This example contains a 48px extension icon and a larger version for high-resolution displays.</p>
 
-<pre class="brush: json no-line-numbers">"icons": {
+<pre class="brush: json">"icons": {
   "48": "icon.png",
   "96": "icon@2x.png"
 }</pre>
