--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/incognito/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/incognito/index.html
@@ -23,13 +23,13 @@ browser-compat: webextensions.manifest.incognito
   <tr>
    <th scope="row">Example</th>
    <td>
-    <pre class="brush: json no-line-numbers">
+    <pre class="brush: json">
 "incognito": "spanning"</pre>
 
-    <pre class="brush: json no-line-numbers">
+    <pre class="brush: json">
 "incognito": "split"</pre>
 
-    <pre class="brush: json no-line-numbers">
+    <pre class="brush: json">
 "incognito": "not_allowed"</pre>
    </td>
   </tr>
@@ -54,13 +54,13 @@ browser-compat: webextensions.manifest.incognito
 
 <h2 id="Example">Example</h2>
 
-<pre class="brush: json no-line-numbers">"incognito": "spanning"
+<pre class="brush: json">"incognito": "spanning"
 </pre>
 
-<pre class="brush: json no-line-numbers">"incognito": "split"
+<pre class="brush: json">"incognito": "split"
 </pre>
 
-<pre class="brush: json no-line-numbers">"incognito": "not_allowed"
+<pre class="brush: json">"incognito": "not_allowed"
 </pre>
 
 <h2 id="Browser_compatibility">Browser compatibility</h2>
