--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/offline_enabled/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/offline_enabled/index.html
@@ -26,7 +26,7 @@ browser-compat: webextensions.manifest.offline_enabled
   <tr>
    <th scope="row">Example</th>
    <td>
-    <pre class="brush: json no-line-numbers">
+    <pre class="brush: json">
 "offline_enabled": true</pre>
    </td>
   </tr>
