--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/page_actions/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/page_actions/index.html
@@ -93,7 +93,7 @@ tags:
 
 <h2 id="Icons">Icons</h2>
 
-<p>For details on how to create icons to use with your page action, see <a href="https://design.firefox.com/photon/visuals/iconography.html">Iconography</a> in the <a class="grey-90 no-underline hover-no-underline" href="https://design.firefox.com/photon/index.html">Photon Design System</a> documentation.</p>
+<p>For details on how to create icons to use with your page action, see <a href="https://design.firefox.com/photon/visuals/iconography.html">Iconography</a> in the <a href="https://design.firefox.com/photon/index.html">Photon Design System</a> documentation.</p>
 
 <h2 id="Examples">Examples</h2>
 
