--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/sidebars/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/sidebars/index.html
@@ -47,7 +47,7 @@ browser.windows.getCurrent({populate: true}).then((windowInfo) =&gt; {
 
 <h2 id="Sidebar_design">Sidebar design</h2>
 
-<p>For details on how to design a sidebar's web page to match the style of Firefox, see the <a class="grey-90 no-underline hover-no-underline" href="https://design.firefox.com/photon/index.html">Photon Design System</a> documentation.</p>
+<p>For details on how to design a sidebar's web page to match the style of Firefox, see the <a href="https://design.firefox.com/photon/index.html">Photon Design System</a> documentation.</p>
 
 <h2 id="Example">Example</h2>
 
