--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/chrome_settings_overrides/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/chrome_settings_overrides/index.html
@@ -18,11 +18,11 @@ browser-compat: webextensions.manifest.chrome_settings_overrides
  <li><code>"search_provider"</code>, which enables you to add a new search engine.</li>
 </ul>
 
-<pre class="brush: json no-line-numbers">"chrome_settings_overrides" : {
+<pre class="brush: json">"chrome_settings_overrides" : {
   "homepage": "https://developer.mozilla.org/"
 }</pre>
 
-<pre class="brush: json no-line-numbers">"chrome_settings_overrides": {
+<pre class="brush: json">"chrome_settings_overrides": {
   "search_provider": {
     "name": "Discogs",
     "search_url": "https://www.discogs.com/search/?q={searchTerms}",
