--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/browser_action/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/browser_action/index.html
@@ -22,7 +22,7 @@ browser-compat: webextensions.manifest.browser_action
   <tr>
    <th scope="row">Example</th>
    <td>
-    <pre class="brush: json no-line-numbers">
+    <pre class="brush: json">
 "browser_action": {
   "browser_style": true,
   "default_icon": {
@@ -121,12 +121,12 @@ browser-compat: webextensions.manifest.browser_action
 
     <p>You can specify a single icon file by supplying a string here:</p>
 
-    <pre class="brush: json no-line-numbers">
+    <pre class="brush: json">
 "default_icon": "path/to/geo.svg"</pre>
 
     <p>To specify multiple icons in different sizes, specify an object here. The name of each property is the icon's height in pixels, and must be convertible to an integer. The value is the URL. For example:</p>
 
-    <pre class="brush: json no-line-numbers">
+    <pre class="brush: json">
     "default_icon": {
       "16": "path/to/geo-16.png",
       "32": "path/to/geo-32.png"
@@ -197,7 +197,7 @@ browser-compat: webextensions.manifest.browser_action
 
 <p>There are two main approaches to this. You can supply a single icon as an SVG file, and it will be scaled correctly:</p>
 
-<pre class="brush: json no-line-numbers">"default_icon": "path/to/geo.svg"</pre>
+<pre class="brush: json">"default_icon": "path/to/geo.svg"</pre>
 
 <p>Alternatively, you can supply several icons in different sizes, and the browser will pick the best match.</p>
 
@@ -210,7 +210,7 @@ browser-compat: webextensions.manifest.browser_action
 
 <p>So you can specify icons that match exactly, on both normal and Retina displays, by supplying three icon files, and specifying them like this:</p>
 
-<pre class="brush: json no-line-numbers">"default_icon": {
+<pre class="brush: json">"default_icon": {
   "16": "path/to/geo-16.png",
   "32": "path/to/geo-32.png",
   "64": "path/to/geo-64.png"
@@ -220,7 +220,7 @@ browser-compat: webextensions.manifest.browser_action
 
 <h2 id="Example">Example</h2>
 
-<pre class="brush: json no-line-numbers">"browser_action": {
+<pre class="brush: json">"browser_action": {
   "default_icon": {
     "16": "button/geo-16.png",
     "32": "button/geo-32.png"
@@ -229,7 +229,7 @@ browser-compat: webextensions.manifest.browser_action
 
 <p>A browser action with just an icon, specified in 2 different sizes. The extension's background scripts can receive click events when the user clicks the icon using code like this:</p>
 
-<pre class="brush: js no-line-numbers"> browser.browserAction.onClicked.addListener(handleClick);</pre>
+<pre class="brush: js"> browser.browserAction.onClicked.addListener(handleClick);</pre>
 
 <pre class="brush: json">"browser_action": {
   "default_icon": {
