--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/chrome_url_overrides/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/chrome_url_overrides/index.html
@@ -22,7 +22,7 @@ browser-compat: webextensions.manifest.chrome_url_overrides
   <tr>
    <th scope="row">Example</th>
    <td>
-    <pre class="brush: json no-line-numbers">
+    <pre class="brush: json">
   "chrome_url_overrides" : {
     "newtab": "my-new-tab.html"
   }</pre>
@@ -86,7 +86,7 @@ browser-compat: webextensions.manifest.chrome_url_overrides
 
 <h2 id="Example">Example</h2>
 
-<pre class="brush: json no-line-numbers">"chrome_url_overrides" : {
+<pre class="brush: json">"chrome_url_overrides" : {
   "newtab": "my-new-tab.html"
 }</pre>
 
