--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/developer/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/developer/index.html
@@ -22,7 +22,7 @@ browser-compat: webextensions.manifest.developer
   <tr>
    <th scope="row">Example</th>
    <td>
-    <pre class="brush: json no-line-numbers">
+    <pre class="brush: json">
 "developer": {
   "name": "Walt Whitman",
   "url": "https://en.wikipedia.org/wiki/Walt_Whitman"
@@ -40,7 +40,7 @@ browser-compat: webextensions.manifest.developer
 
 <h2 id="Example">Example</h2>
 
-<pre class="brush: json no-line-numbers">"developer": {
+<pre class="brush: json">"developer": {
   "name": "Walt Whitman",
   "url": "https://en.wikipedia.org/wiki/Walt_Whitman"
 }</pre>
