--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/devtools_page/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/devtools_page/index.html
@@ -26,7 +26,7 @@ browser-compat: webextensions.manifest.devtools_page
   <tr>
    <th scope="row">Example</th>
    <td>
-    <pre class="brush: json no-line-numbers">
+    <pre class="brush: json">
 "devtools_page": "devtools/my-page.html"</pre>
    </td>
   </tr>
@@ -41,7 +41,7 @@ browser-compat: webextensions.manifest.devtools_page
 
 <h2 id="Example">Example</h2>
 
-<pre class="brush: json no-line-numbers">"devtools_page": "devtools/my-page.html"</pre>
+<pre class="brush: json">"devtools_page": "devtools/my-page.html"</pre>
 
 <h2 id="Browser_compatibility">Browser compatibility</h2>
 
