--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/dictionaries/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/dictionaries/index.html
@@ -23,7 +23,7 @@ browser-compat: webextensions.manifest.dictionaries
   <tr>
    <th scope="row">Example</th>
    <td>
-    <pre class="brush: json no-line-numbers">
+    <pre class="brush: json">
 "dictionaries": {
   "en-US": "dictionaries/en-US.dic"
 }</pre>
@@ -38,7 +38,7 @@ browser-compat: webextensions.manifest.dictionaries
 
 <h2 id="Example">Example</h2>
 
-<pre class="brush: json no-line-numbers">"dictionaries": {
+<pre class="brush: json">"dictionaries": {
   "en-US": "dictionaries/en-US.dic"
 }</pre>
 
