--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/manifest_version/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/manifest_version/index.html
@@ -22,7 +22,7 @@ browser-compat: webextensions.manifest.manifest_version
   <tr>
    <th scope="row">Example</th>
    <td>
-    <pre class="brush: json no-line-numbers">
+    <pre class="brush: json">
 "manifest_version": 2</pre>
    </td>
   </tr>
@@ -35,7 +35,7 @@ browser-compat: webextensions.manifest.manifest_version
 
 <h2 id="Example">Example</h2>
 
-<pre class="brush: json no-line-numbers">"manifest_version": 2
+<pre class="brush: json">"manifest_version": 2
 </pre>
 
 <h2 id="Browser_compatibility">Browser compatibility</h2>
