--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/omnibox/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/omnibox/index.html
@@ -22,7 +22,7 @@ browser-compat: webextensions.manifest.omnibox
   <tr>
    <th scope="row">Example</th>
    <td>
-    <pre class="brush: json no-line-numbers">
+    <pre class="brush: json">
 "omnibox": {
   "keyword": "mdn"
 }</pre>
@@ -39,7 +39,7 @@ browser-compat: webextensions.manifest.omnibox
 
 <h2 id="Example">Example</h2>
 
-<pre class="brush: json no-line-numbers">"omnibox": {
+<pre class="brush: json">"omnibox": {
   "keyword": "mdn"
 }</pre>
 
