--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/options_page/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/options_page/index.html
@@ -26,7 +26,7 @@ browser-compat: webextensions.manifest.options_page
   <tr>
    <th scope="row">Example</th>
    <td>
-    <pre class="brush: json; no-line-numbers">
+    <pre class="brush: json;">
 "options_page": "options/options.html"</pre>
    </td>
   </tr>
@@ -46,7 +46,7 @@ browser-compat: webextensions.manifest.options_page
 
 <h2 id="Example">Example</h2>
 
-<pre class="brush: json; no-line-numbers">"options_page": "options/options.html"
+<pre class="brush: json;">"options_page": "options/options.html"
 </pre>
 
 <h2 id="Browser_compatibility">Browser compatibility</h2>
