--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/options_ui/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/options_ui/index.html
@@ -27,7 +27,7 @@ browser-compat: webextensions.manifest.options_ui
 		<tr>
 			<th scope="row">Example</th>
 			<td>
-			<pre class="brush: json; no-line-numbers">
+			<pre class="brush: json;">
 "options_ui": {
   "page": "options/options.html"
 }</pre>
@@ -100,7 +100,7 @@ The latter (or {{WebExtAPIRef("runtime.Port")}} equivalents) can also be used 
 
 <h2 id="Example">Example</h2>
 
-<pre class="brush: json; no-line-numbers">"options_ui": {
+<pre class="brush: json;">"options_ui": {
   "page": "options/options.html"
 }</pre>
 
