--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/devtools_panels/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/devtools_panels/index.html
@@ -54,11 +54,11 @@ browser.devtools.panels.create(
 
 <h2 id="Developer_panel_design">Developer panel design</h2>
 
-<p>For details on how to design your developer panel's web page to match the style of Firefox, see the <a class="grey-90 no-underline hover-no-underline" href="https://design.firefox.com/photon/index.html">Photon Design System</a> documentation.</p>
+<p>For details on how to design your developer panel's web page to match the style of Firefox, see the <a href="https://design.firefox.com/photon/index.html">Photon Design System</a> documentation.</p>
 
 <h2 id="Icons">Icons</h2>
 
-<p>For details on how to create icons to use with your developer tools panel, see <a href="https://design.firefox.com/photon/visuals/iconography.html">Iconography</a> in the <a class="grey-90 no-underline hover-no-underline" href="https://design.firefox.com/photon/index.html">Photon Design System</a> documentation.</p>
+<p>For details on how to create icons to use with your developer tools panel, see <a href="https://design.firefox.com/photon/visuals/iconography.html">Iconography</a> in the <a href="https://design.firefox.com/photon/index.html">Photon Design System</a> documentation.</p>
 
 <h2 id="Examples">Examples</h2>
 
