--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/extension_pages/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/extension_pages/index.html
@@ -64,7 +64,7 @@ browser.history.onVisited.addListener(onVisited);</pre>
 
 <h2 id="Web_page_design">Web page design</h2>
 
-<p>For details on how to design your web page's to match the style of Firefox, see the <a class="grey-90 no-underline hover-no-underline" href="https://design.firefox.com/photon/index.html">Photon Design System</a> and <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/user_interface/Browser_styles">browser styles</a> documentation.</p>
+<p>For details on how to design your web page's to match the style of Firefox, see the <a href="https://design.firefox.com/photon/index.html">Photon Design System</a> and <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/user_interface/Browser_styles">browser styles</a> documentation.</p>
 
 <h2 id="Examples">Examples</h2>
 
