--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/popups/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/popups/index.html
@@ -52,7 +52,7 @@ tags:
 
 <h2 id="Popup_design">Popup design</h2>
 
-<p>For details on how to design your popup's web page to match the style of Firefox, see the <a class="grey-90 no-underline hover-no-underline" href="https://design.firefox.com/photon/index.html">Photon Design System</a> documentation.</p>
+<p>For details on how to design your popup's web page to match the style of Firefox, see the <a href="https://design.firefox.com/photon/index.html">Photon Design System</a> documentation.</p>
 
 <h2 id="Examples">Examples</h2>
 
