Finish removing no-line-numbers

--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/index.html
@@ -39,7 +39,7 @@ browser-compat: webextensions.manifest
 
 <p>You can access your extension's manifest from the extension's JavaScript using the {{WebExtAPIRef("runtime.getManifest()")}} function:</p>
 
-<pre class="brush: js no-line-numbers">browser.runtime.getManifest().version;</pre>
+<pre class="brush: js">browser.runtime.getManifest().version;</pre>
 
 <h2 id="Example">Example</h2>
 
