Remove more random classes

--- a/files/en-us/mozilla/add-ons/webextensions/chrome_incompatibilities/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/chrome_incompatibilities/index.html
@@ -178,7 +178,7 @@ setCookie.then(logCookie, logError);</pre>
 
       <p>To work cross-browser, you can specify the path as an absolute URL, starting at the extension's root, like this:</p>
 
-      <pre class="brush: none;">/path/to/script.js
+      <pre class="brush: plain;">/path/to/script.js
     </pre>
      </li>
      <li>
@@ -261,7 +261,7 @@ setCookie.then(logCookie, logError);</pre>
   <dl>
     <dt>DeclarativeContent API</dt>
     <dd>
-      <p>Chrome's <a href="https://developer.chrome.com/extensions/declarativeContent" name="dec">declarativeContent</a> API <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1435864">has not yet been implemented</a> in Firefox:</p>
+      <p>Chrome's <a href="https://developer.chrome.com/extensions/declarativeContent">declarativeContent</a> API <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1435864">has not yet been implemented</a> in Firefox:</p>
       <dl>
        <dt>In Firefox</dt>
        <dd>In addition, Firefox <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1323433#c16">will not be supporting</a> the <code>declarativeContent.RequestContentScript</code> API (which is rarely used, and is unavailable in stable releases of Chrome).</dd>
