--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/theme/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/theme/index.html
@@ -1268,7 +1268,7 @@ browser-compat: webextensions.manifest.theme
 
 <p>A basic theme must define an image to add to the header, the accent color to use in the header, and the color of text used in the header:</p>
 
-<pre class="brush: json" dir="ltr"> "theme": {
+<pre class="brush: json"> "theme": {
    "images": {
      "theme_frame": "images/sun.jpg"
    },
@@ -1280,7 +1280,7 @@ browser-compat: webextensions.manifest.theme
 
 <p>Multiple images can be used to fill the header. Before Firefox version 60, use a blank or transparent header image to gain control over the placement of each additional image:</p>
 
-<pre class="brush: json" dir="ltr"> "theme": {
+<pre class="brush: json"> "theme": {
    "images": {
      "additional_backgrounds": [ "images/left.png" , "images/middle.png", "images/right.png"]
    },
@@ -1295,7 +1295,7 @@ browser-compat: webextensions.manifest.theme
 
 <p>You can also fill the header with a repeated image, or images, in this case a single image anchored in the middle top of the header and repeated across the rest of the header:</p>
 
-<pre class="brush: json" dir="ltr"> "theme": {
+<pre class="brush: json"> "theme": {
    "images": {
      "additional_backgrounds": [ "images/logo.png"]
    },
