--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/browser_styles/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/browser_styles/index.html
@@ -95,9 +95,8 @@ tags:
 
 <h2 id="Firefox_Panel_Components">Firefox Panel Components</h2>
 
-<div class="blockIndicator nonStandard">
-<p><strong>Non-Standard</strong><br>
- This feature is non-standard and only works in Firefox.</p>
+<div class="note">
+<p><strong>Note:</strong> This feature is non-standard and only works in Firefox.</p>
 </div>
 
 <p>The <code>chrome://browser/content/extension.css</code> stylesheet also contains the styles for the Firefox Panel Components.</p>
