--- a/files/en-us/mozilla/add-ons/contact_us/index.html
+++ b/files/en-us/mozilla/add-ons/contact_us/index.html
@@ -22,7 +22,7 @@ tags:
 
 <h3 id="Chat">Chat</h3>
 
-<p><a class="external text" href="https://matrix.org/" rel="nofollow">Matrix</a> is an open, lightweight protocol for decentralized, real-time communications. For information on how to join Mozilla's Matrix instance, refer to the <a href="https://wiki.mozilla.org/Matrix">Matrix page on MozillaWiki</a>.</p>
+<p><a href="https://matrix.org/">Matrix</a> is an open, lightweight protocol for decentralized, real-time communications. For information on how to join Mozilla's Matrix instance, refer to the <a href="https://wiki.mozilla.org/Matrix">Matrix page on MozillaWiki</a>.</p>
 
 <ul>
  <li><a href="https://chat.mozilla.org/#/room/#addons:mozilla.org">Add-ons</a> (support for extensions, themes, and the WebExtensions API)</li>
