--- a/files/en-us/mozilla/add-ons/webextensions/tips/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/tips/index.html
@@ -46,10 +46,10 @@ tags:
 
 <p>Then, to compile an individual script, run:</p>
 
-<pre class="brush: sh">BABEL_ENV=firefox babel &lt;filename&gt;
+<pre class="brush: bash">BABEL_ENV=firefox babel &lt;filename&gt;
 </pre>
 
 <p>Or, to compile every JavaScript file under the directory <code>src</code> and place the compiled files in <code>compiled</code>, copying over non-JavaScript files in the process, run:</p>
 
-<pre class="brush: sh">BABEL_ENV=firefox babel -Dd compiled src
+<pre class="brush: bash">BABEL_ENV=firefox babel -Dd compiled src
 </pre>
