--- a/files/en-us/mozilla/add-ons/webextensions/developing_webextensions_for_thunderbird/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/developing_webextensions_for_thunderbird/index.html
@@ -10,7 +10,7 @@ tags:
 ---
 <p>{{AddonSidebar}}{{Draft}}</p>
 
-<p class="summary"><span class="seoSummary">You'll approach the coding of an extension for Thunderbird in the same way as you would for a Firefox extension; using a text editor or tool of your choice to write the code.</span></p>
+<p>You'll approach the coding of an extension for Thunderbird in the same way as you would for a Firefox extension; using a text editor or tool of your choice to write the code.</p>
 
 <h2 id="API_differences">API differences</h2>
 
