--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/optional_permissions/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/optional_permissions/index.html
@@ -85,7 +85,15 @@ browser-compat: webextensions.manifest.optional_permissions
 
 <p>Note that this is a subset of the API permissions allowed in <code><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/permissions#api_permissions">permissions</a></code>.</p>
 
-<p>Of this set, the<span class="blob-code-inner"><span class="pl-s"> following permissions are granted silently, without a user prompt:</span></span><span class="blob-code-inner"><span class="pl-s"> <code>activeTab</code>, <code>cookies</code>, <code>idle</code>, <code>webRequest</code>, <code>webRequestBlocking</code><span class="pl-pds">.</span></span></span></p>
+<p>Of this set, the following permissions are granted silently, without a user prompt:
+
+<ul>
+  <li><code>activeTab</code></li>
+  <li><code>cookies</code></li>
+  <li><code>idle</code></li>
+  <li><code>webRequest</code></li>
+  <li><code>webRequestBlocking</code></li>
+</ul>
 
 <h2 id="Example">Example</h2>
 
