--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/browser_styles/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/browser_styles/index.html
@@ -45,7 +45,7 @@ tags:
   <tr>
    <td><code><a href="/en-US/docs/Web/HTML/Element/button">&lt;button&gt;</a></code></td>
    <td>
-    <pre class="brush: html no-line-numbers">
+    <pre class="brush: html">
 &lt;button class="browser-style"&gt;Click me&lt;/button&gt;</pre>
    </td>
   </tr>
@@ -54,7 +54,7 @@ tags:
     <p><code><a href="/en-US/docs/Web/HTML/Element/select">&lt;select&gt;</a></code></p>
    </td>
    <td>
-    <pre class="brush: html no-line-numbers">
+    <pre class="brush: html">
 &lt;select class="browser-style" name="select"&gt;
   &lt;option value="value1"&gt;Value 1&lt;/option&gt;
   &lt;option value="value2" selected&gt;Value 2&lt;/option&gt;
@@ -65,14 +65,14 @@ tags:
   <tr>
    <td><code><a href="/en-US/docs/Web/HTML/Element/textarea">&lt;textarea&gt;</a></code></td>
    <td>
-    <pre class="brush: html no-line-numbers">
+    <pre class="brush: html">
 &lt;textarea class="browser-style"&gt;Write here&lt;/textarea&gt;</pre>
    </td>
   </tr>
   <tr>
    <td>Parent of an <code><a href="/en-US/docs/Web/HTML/Element/input">&lt;input&gt;</a></code></td>
    <td>
-    <pre class="brush: html no-line-numbers">
+    <pre class="brush: html">
 &lt;div class="browser-style"&gt;
   &lt;input type="radio" id="op1" name="choices" value="op1"/&gt;
   &lt;label for="op1"&gt;Option 1&lt;/label&gt;
@@ -95,9 +95,8 @@ tags:
 
 <h2 id="Firefox_Panel_Components">Firefox Panel Components</h2>
 
-<div class="blockIndicator nonStandard">
-<p><strong>Non-Standard</strong><br>
- This feature is non-standard and only works in Firefox.</p>
+<div class="note">
+<p><strong>Note:</strong> This feature is non-standard and only works in Firefox.</p>
 </div>
 
 <p>The <code>chrome://browser/content/extension.css</code> stylesheet also contains the styles for the Firefox Panel Components.</p>
