Fix a few TemplateLink macros links

--- a/files/en-us/mozilla/firefox/experimental_features/index.html
+++ b/files/en-us/mozilla/firefox/experimental_features/index.html
@@ -17,7 +17,7 @@ tags:
 
 <div class="notecard note">
   <h4>Editor's notes</h4>
-  <p>When adding features to these tables, please try to include a link to the relevant bug or bugs using the {{TemplateLink("bug")}} macro: <code>\{{bug(<em>bug-number</em>)}}</code>.</p>
+  <p>When adding features to these tables, please try to include a link to the relevant bug or bugs using the <a href="https://github.com/mdn/yari/blob/main/kumascript/macros/bug.ejs"><code>bug</code></a> macro: <code>\{{bug(<em>bug-number</em>)}}</code>.</p>
 </div>
 
 <h2 id="HTML">HTML</h2>
@@ -1130,7 +1130,7 @@ tags:
  </tbody>
 </table>
 
-<h3 id="WebRTC_and_media">WebShare API</h3>
+<h3 id="webshare_api">WebShare API</h3>
 
 <p>The <a href="/en-US/docs/Web/API/Web_Share_API">Web Share API</a> allows sharing of files, URLs and other data from a site.
   Note that Firefox implements {{domxref("Navigator.share()")}} but not {{domxref("Navigator.canShare()")}} ({{bug(1666203)}}).</p>
@@ -1220,7 +1220,7 @@ tags:
 
 <h4 id="AVIF_compliance_strictness">AVIF compliance strictness</h4>
 
-<p>The <code>image.avif.compliance_strictness</code> preference can be used to control the <em>strictness</em> applied when processing <a href="/en-US/docs/Web/Media/Formats/Image_types#AVIF_image">AVIF</a> images.
+<p>The <code>image.avif.compliance_strictness</code> preference can be used to control the <em>strictness</em> applied when processing <a href="/en-US/docs/Web/Media/Formats/Image_types#avif_image">AVIF</a> images.
   This allows Firefox users to display images that render on some other browsers, even if they are not strictly compliant.</p>
 
 <p>Permitted values are:</p>
