--- a/files/en-us/mozilla/add-ons/webextensions/intercept_http_requests/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/intercept_http_requests/index.html
@@ -88,7 +88,11 @@ browser.webRequest.onBeforeRequest.addListener(
 
 }</pre>
 
-<p>The only change here is to add the <code>"webRequestBlocking"</code> <code><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/permissions">permission</a></code>. We need to ask for this extra permission whenever we are actively modifying a request.</p>
+<p>The changes here are to:</p>
+<ul> 
+  <li>add the <code>"webRequestBlocking"</code> <code><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/permissions">permission</a></code>. This extra permission is needed whenever an extension wants to modify a request.</li>
+  <li>replace the <code>&lt;all_urls&gt;</code> permission with individual <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/permissions#host_permissions">host permissions</a>, as this is good practice to minimize the number of requested permissions.</li>
+</ul>
 
 <p>Next, replace "background.js" with this:</p>
 
@@ -121,7 +125,25 @@ browser.webRequest.onBeforeRequest.addListener(
 
 <p>Finally we'll use <code>webRequest</code> to modify request headers. In this example we'll modify the "User-Agent" header so the browser identifies itself as Opera 12.16, but only when visiting pages under http://useragentstring.com/".</p>
 
-<p>The "manifest.json" can stay the same as in the previous example.</p>
+<p>Update your "manifest.json" to include <code>http://useragentstring.com/</code></p>
+
+<pre class="brush: json">{
+  "description": "Demonstrating webRequests",
+  "manifest_version": 2,
+  "name": "webRequest-demo",
+  "version": "1.0",
+
+  "permissions": [
+    "webRequest",
+    "webRequestBlocking",
+    "http://useragentstring.com/"
+  ],
+
+  "background": {
+    "scripts": ["background.js"]
+  }
+}</pre>
+
 
 <p>Replace "background.js" with code like this:</p>
 
