--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/homepage_url/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/homepage_url/index.html
@@ -31,7 +31,7 @@ browser-compat: webextensions.manifest.homepage_url
 
 <p>URL for the extension's home page.</p>
 
-<p>If the <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/developer">developer</a> key is supplied and it contains the "url" property, this will override the homepage_url key.</p>
+<p>If both <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/developer">developer</a> key is supplied and it contains the "url" property and "homepage_url" is defined. Mozilla Firefox will favor "developer.url" while Opera favors "homepage_url".</p>
 
 <p>This is a <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/Internationalization#internationalizing_manifest.json">localizable property</a>.</p>
 
